# packaging_tutorial

./: pyproject.toml
src/example_package/: example.py
