[tool.poetry]
name = "packaging_tutorial"
version = "0.2.0"
description = ""
authors = ["Gabriel Pedrosa <gabriel@alude.com.br>"]
packages = [
    { include = "example_package", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
